--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Arch</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="first_fragment">First fragment</string>
+    <string name="second_fragment">Second fragment</string>
+    <string name="click_me">Click me!</string>
+    <string name="hello_world">Hello World!</string>
 </resources>
